manifests/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
      name: deployment
    securityContext:
      fsGroup: 472
      runAsUser: 472
      runAsGroup: 0
    spec:
      containers:
        - args:
            - -config=/etc/grafana/grafana.ini
          image: docker.io/grafana/grafana:11.4.0
          name: grafana
          ports:
            - containerPort: 3000
              name: grafana-http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
              scheme: HTTP
          volumeMounts:
            - mountPath: /etc/grafana/
              name: grafana-ini
            - mountPath: /var/lib/grafana
              name: grafana-data
            - mountPath: /var/log/grafana
              name: grafana-logs
      volumes:
        - configMap:
            defaultMode: 420
            name: grafana-ini
          name: grafana-ini
        - emptyDir: {}
          name: grafana-logs
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-pvc
