manifests/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
  - name: grafana
    port: 3000
    protocol: TCP
    targetPort: grafana-http
  selector:
    app: grafana
  type: ClusterIP
